k8s/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: vault-secret
  name: vault-secret
  namespace: testing
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: vault-secret
  template: 
    metadata: 
      labels: 
        app: vault-secret
    spec: 
      containers: 
        - image: roweluchi/vault-secret:k8s
          imagePullPolicy: Always
          name: vault-secret
          ports: 
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts: 
            - mountPath: /var/run/secrets/data
              name: vault-service-account
      volumes: 
        - name: vault-service-account
          secret: 
            secretName: vault-service-account-token-9fk94
            items:
              - key: token
                path: "token"
---
apiVersion: v1
kind: Service
metadata:
  name: vault-secret
  namespace: testing
  labels:
    app: vault-secret
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: vault-secret
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-secret
  namespace: testing
  labels:
    app: vault-secret
spec:
  hosts:
  - vault-test.stg.ob.gcpnp.anz
  gateways:
  - global-gateway.ingress.svc.cluster.local
  http:
  - route:
    - destination:
        host: vault-secret
        port:
          number: 80
